fixed server.py and changes is algorithm

--- a/static/template/index.html
+++ b/static/template/index.html
@@ -120,10 +120,7 @@
     <script src="/static/js/showScheduleDetails.js"></script>
     <script src="/static/js/predictingInput.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.js"></script>
-    <!--
-      <script
-      src="/static/js/createSelectedRoute.js"
-    ></script>
-    -->
+    <script src="/static/js/createSelectedRoute.js"></script>
+   
   </body>
 </html>
