--- a/static/css/index.css
+++ b/static/css/index.css
@@ -112,6 +112,14 @@ body {
   background-color: #353434;
   z-index: 1;
 }
+.busModalsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+  height: 80%;
+  overflow-y: scroll;
+}
 .stopNameModal,
 .busNameModal,
 .directionModal {
