--- a/static/css/scheduleDetails.css
+++ b/static/css/scheduleDetails.css
@@ -57,19 +57,29 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
   cursor: default;
   font-size: 20px;
   color: white;
   width: 80%;
   margin-bottom: 50px;
 }
+#dataFirstBus,
+#dataSecondBus {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+}
+#dataFirstBus p,
+#dataSecondBus p {
+  margin-bottom: 3px;
+}
 .headerModal {
   display: flex;
   justify-content: center;
   font-size: 30px;
   color: white;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
 }
 .busModal img {
   margin: 7px 5px 0px 0px;
