--- a/static/template/index.html
+++ b/static/template/index.html
@@ -109,18 +109,17 @@
           src="/static/img/arrow-icon.svg"
         />
       </div>
-      <div id="departureHours"></div>
+      <div id="departureHours" class="departureHoursOnRight"></div>
       <div id="map"></div>
       </script>
     </div>
-    <script src="/static/js/index.js"></script>
-    <script src="/static/js/server.js"></script>
-    <script src="/static/js/createSelectedRoute.js"></script>
     <script src="/static/js/map.js"></script>
     <script src="/static/js/createRoutes.js"></script>
     <script src="/static/js/showScheduleDetails.js"></script>
     <script src="/static/js/predictingInput.js"></script>
+    <script src="/static/js/server.js"></script>
+    <script src="/static/js/createSelectedRoute.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/leaflet-routing-machine@3.2.12/dist/leaflet-routing-machine.js"></script>
-   
+    <script src="/static/js/index.js"></script>
   </body>
 </html>
