--- a/static/template/index.html
+++ b/static/template/index.html
@@ -109,7 +109,7 @@
           src="/static/img/arrow-icon.svg"
         />
       </div>
-      <div id="departureHours" class="departureHoursOnRight"></div>
+      <div id="departureHours"></div>
       <div id="map"></div>
       </script>
     </div>
