--- a/static/css/index.css
+++ b/static/css/index.css
@@ -100,13 +100,12 @@ body {
   background-color: var(--background);
 }
 #departureHours {
-  display: flex;
-  transition: width 0.2s;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: absolute;
-  width: 0px;
+  width: 480px;
   left: 520px;
   height: 100%;
   background-color: #353434;
@@ -332,6 +331,7 @@ body {
     justify-content: center;
   }
   #departureHours {
+    width: 100vw;
   }
   #foundRoutes {
     top: 70px;
@@ -399,8 +399,6 @@ body {
     left: 20px;
     top: 45px;
   }
-}
-@media screen and (max-width: 500px) {
   #back-btn {
     left: 20px;
     top: 45px;
@@ -414,5 +412,16 @@ body {
   }
   #arrow-icon-hours {
     top: 94%;
+  }
+}
+@media screen and (min-width: 800px) and (max-width: 1100px) {
+  .searchContainer {
+    height: 30%;
+  }
+  .optionNav {
+    font-size: 35px;
+  }
+  .arrow-icon {
+    top: 88%;
   }
 }
