--- a/static/css/index.css
+++ b/static/css/index.css
@@ -28,10 +28,10 @@ body {
   color: var(--text-color);
   background-color: var(--background);
 }
-.popup header {
+#popup header {
   margin-bottom: 30px;
 }
-.popup {
+#popup {
   white-space: pre-wrap;
   padding: 50px;
   font-size: 20px;
@@ -50,6 +50,15 @@ body {
   -webkit-box-shadow: -2px 3px 14px 0px rgba(237, 60, 60, 1);
   -moz-box-shadow: -2px 3px 14px 0px rgba(237, 60, 60, 1);
   box-shadow: -2px 3px 14px 0px rgba(237, 60, 60, 1);
+}
+#closePopup {
+  padding: 0;
+  border: none;
+  background: none;
+  cursor: pointer;
+  position: absolute;
+  top: 50px;
+  right: 40px;
 }
 
 #map {
@@ -106,7 +115,7 @@ body {
   font-size: 20px;
 }
 .mainContainer {
-  filter: blur(0px);
+  filter: blur(5px);
   width: 100vw;
   height: 100vh;
   display: flex;
