--- a/static/css/index.css
+++ b/static/css/index.css
@@ -123,6 +123,7 @@ body {
   font-size: 20px;
 }
 .mainContainer {
+  pointer-events: none;
   filter: blur(5px);
   width: 100vw;
   height: 100vh;
